# controllers/api.js
@@ -4,19 +4,58 @@ let requestPromise = require('request-promise');
 
 module.exports.getUser = function getUser (req, res, next) {
 
-     res.send("ok!!!!!!" + JSON.stringify(req.user));
+
+    if (req.user){
+
+        // fb token is valid
+
+
+        // options for user service call
+        let options = {
+            method: 'get',
+            uri: process.env.USER_SERVICE_URL,
+            qs: {
+                fb_user_id: req.user.id
+            },
+            headers: {
+                'User-Agent': 'Request-Promise'
+            },
+            json: true // Automatically parses the JSON string in the response
+        };
+
+
+        requestPromise(options)
+            .then(function (result) {
+                res.send(JSON.stringify(result));
+            })
+            .catch(function (err) {
+
+                console.log("error from user service  " +  err);
+                res.send(err);
+            });
+
+
+    }
+    else {
+
+    }
+
+     res.send("error - missing identity on request");
 
 };
 
 
-module.exports.createUser = function getUser (req, res, next) {
+/**
+ * signup - create new user
+ * @param req
+ * @param res
+ * @param next
+ */
+module.exports.createUser = function signup (req, res, next) {
 
-    console.log("create user called");
      if (req.user){
 
-
-         console.log(process.env.USER_SERVICE_URL + " user service url");
-         console.log(req.user.id);
+         // options for user service call
          let options = {
              method: 'POST',
              uri: process.env.USER_SERVICE_URL,
@@ -34,18 +73,17 @@ module.exports.createUser = function getUser (req, res, next) {
          // call user service
          requestPromise(options)
              .then(function (result) {
-                 console.log(result + " is the result from user services");
+                 console.log(result + " is the result from user service");
                  res.send(JSON.stringify(result));
              })
              .catch(function (err) {
 
-                 console.log("error from user serivce  " +  err);
+                 console.log("error from user service  " +  err);
+                 res.send(err);
              });
-
-
      }
      else
-          res.send("error!!!!!!" + JSON.stringify(req.user));
+          res.send("errro creating user - missing identity on req");
 
 };
 
